--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,12 +9,25 @@
 // reset rules
 // ==================================== */
 
+@import "bootstrap/scss/bootstrap-grid";
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
+.row + .row {
+  margin-top: 16px;
+}
+
+.row > .col,
+.row > [class^="col-"] {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background-color: rgba(86, 61, 124, 0.15);
+  border: 1px solid rgba(86, 61, 124, 0.2);
+}
 html {
   font-size: 16px;
 }
@@ -42,3 +55,7 @@ video {
 /* ====================================
 // base rules
 // ==================================== */
+
+header {
+  // background-image: url("../img/header-img.webp");
+}
