--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,27 @@
 // ==================================== */
 
 @import "bootstrap/scss/bootstrap-grid";
+@import url("https://use.typekit.net/vre3rku.css");
+
+@media (min-width: 375) {
+  a {
+    font-size: 15px;
+  }
+
+  h2 {
+    font-size: 25px;
+  }
+}
+
+@media (min-width: 1024px) {
+  a {
+    font-size: 25px;
+  }
+
+  h2 {
+    font-size: 30px;
+  }
+}
 
 * {
   box-sizing: border-box;
@@ -23,10 +44,10 @@
 
 .row > .col,
 .row > [class^="col-"] {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  background-color: rgba(86, 61, 124, 0.15);
-  border: 1px solid rgba(86, 61, 124, 0.2);
+  // padding-top: 12px;
+  // padding-bottom: 12px;
+  // background-color: rgba(86, 61, 124, 0.15);
+  // border: 1px solid rgba(86, 61, 124, 0.2);
 }
 html {
   font-size: 16px;
@@ -39,6 +60,7 @@ body {
 
   font-size: 1rem;
   line-height: 1.25;
+  background-color: #f0ece1;
 }
 
 a {
@@ -57,5 +79,71 @@ video {
 // ==================================== */
 
 header {
-  // background-image: url("../img/header-img.webp");
+  position: relative;
+  height: 545px;
+}
+
+.header-background {
+  position: absolute;
+  inset: 0;
+  filter: blur(2);
+  background-image: url("../img/header-img.webp");
+  background-size: cover;
+  z-index: -2;
+  background-position: center;
+}
+
+h1 {
+  width: 150px;
+  padding-top: 190px;
+  margin-left: 12%;
+  z-index: 1;
+}
+
+nav {
+  color: black;
+  text-decoration: underline;
+  font-family: adobe-caslon-pro, serif;
+  font-size: 15px;
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  padding: 57px 0;
+}
+
+h2 {
+  font-family: adobe-caslon-pro, serif;
+  font-weight: 200;
+  font-size: 25px;
+  font-style: italic;
+  padding-top: 40px;
+  padding-bottom: 20px;
+}
+
+p {
+  font-family: adobe-caslon-pro, serif;
+  font-size: 15px;
+  padding: 0 28px 70px 0;
+}
+
+.noi {
+  background-color: #af8964;
+}
+
+li {
+  font-family: adobe-caslon-pro, serif;
+  font-size: 15px;
+  list-style-type: "-";
+  padding-left: 20px;
+  margin-left: 10px;
+}
+
+.evento-background {
+  background-image: url("../img/library-img.webp");
+  background-position: center;
+  background-size: 100%;
+}
+
+.carousel-menu {
+  margin: auto;
 }
