--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,19 +11,29 @@
 
 @import "bootstrap/scss/bootstrap-grid";
 @import url("https://use.typekit.net/vre3rku.css");
-@import "swiper/swiper";
 
 @media (max-width: 768px) {
+  h2 {
+    font-size: 25px;
+    padding-top: 40px;
+    padding-left: 25px;
+    font-style: italic;
+  }
+
+  .menu {
+    padding-bottom: 50px;
+  }
+
+  .menu-carousel {
+    text-align: center;
+    padding: 143px 0 143px;
+  }
   .menu-carousel img {
     width: 150px;
   }
-  .evento-background {
-    padding: 85px 10px 80px 0;
-  }
-  nav {
-    text-decoration: underline;
-    gap: 10px;
-    padding: 57px 0;
+
+  .menu-carousel-lg {
+    display: none;
   }
 
   img.cake {
@@ -33,8 +43,17 @@
     width: 45px;
   }
 
-  a {
-    font-size: 15px;
+  .instagram-logo {
+    padding-left: 25px;
+    padding-bottom: 5px;
+  }
+
+  .evento {
+    margin-top: 200px;
+  }
+
+  .evento-background {
+    padding: 85px 10px 80px 0;
   }
 
   .noi {
@@ -53,32 +72,14 @@
     padding-top: 20px;
   }
 
-  .instagram-logo {
-    padding-left: 25px;
-    padding-bottom: 5px;
+  nav {
+    text-decoration: underline;
+    gap: 10px;
+    padding: 57px 0;
   }
 
-  .menu-carousel {
-    text-align: center;
-    padding: 143px 0 143px;
-  }
-
-  .evento {
-    margin-top: 200px;
-  }
-
-  h2 {
-    font-size: 25px;
-    padding-top: 40px;
-    padding-left: 25px;
-    font-style: italic;
-  }
-  .menu-carousel-lg {
-    display: none;
-  }
-
-  .menu {
-    padding-bottom: 50px;
+  a {
+    font-size: 15px;
   }
 
   footer {
@@ -87,33 +88,23 @@
 }
 
 @media (min-width: 1024px) {
-  .menu-carousel img {
-    width: 288px;
-  }
-
-  .menu-carousel {
-    display: none;
-  }
-
-  .indirizzo {
-    padding: 10px 0 0;
-  }
-
-  .evento-background {
-    padding: 85px 45px 80px 0;
-    margin-bottom: 100px;
-  }
-
-  nav {
-    text-decoration: none;
-    gap: 95px;
-    padding: 57px 0;
+  h2 {
+    font-size: 30px;
+    padding-top: 30px;
   }
 
   .menu {
     padding-bottom: 153px;
     margin-bottom: 140px;
     margin-top: 140px;
+  }
+
+  .menu-carousel img {
+    width: 288px;
+  }
+
+  .menu-carousel {
+    display: none;
   }
 
   img.cake {
@@ -123,22 +114,37 @@
     width: 48px;
   }
 
+  .instagram-logo {
+    padding-left: 20px;
+    padding-bottom: 10px;
+  }
+
+  .evento-background {
+    padding: 85px 45px 80px 0;
+    margin-bottom: 100px;
+  }
+
+  nav a {
+    text-decoration: none;
+  }
+
+  nav {
+    gap: 95px;
+    padding: 57px 0;
+  }
+
   a {
     font-size: 25px;
   }
 
-  h2 {
-    font-size: 30px;
-    padding-top: 30px;
+  a:hover {
+    opacity: 0.5;
   }
 
   .history,
   p {
     padding-right: 52px;
     padding-left: 25px;
-  }
-  .history {
-    padding-bottom: 178px;
   }
 
   ul,
@@ -147,9 +153,12 @@
     padding-left: 20px;
   }
 
-  .instagram-logo {
-    padding-left: 20px;
-    padding-bottom: 10px;
+  .history {
+    padding-bottom: 178px;
+  }
+
+  .indirizzo {
+    padding: 10px 0 0;
   }
 
   footer {
